--- a/src/styles/prism-vscode-dark.css
+++ b/src/styles/prism-vscode-dark.css
@@ -6,13 +6,13 @@ pre[class*='language-'] {
   color: #d4d4d4;
   background: none;
   font-family: 'Geist Mono', Menlo, Monaco, 'Courier New', monospace;
-  font-size: 0.875rem;
+  font-size: 0.625rem !important;
   text-align: left;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
   word-wrap: normal;
-  line-height: 1.6;
+  line-height: 1.3;
   tab-size: 2;
   hyphens: none;
 }
